# voxel-engine

./: Cargo.toml  README.md
contree/: Cargo.toml
contree/src/: finding.rs  gpu_binding.rs  lib.rs  node_insertion.rs  node_management.rs  raycasting.rs  util.rs
rendering/: Cargo.toml
rendering/src/: lib.rs  main.rs  renderer.rs
src/: block.rs  contree.rs  contree.wgsl  generation.rs  lib.rs  main.rs  raymarching.wgsl  renderer.rs  rendering.rs  test_shader.wgsl  viewer.rs
src/chunk/: chunk_load.rs  lazy_block.rs  mod.rs
src/contree/: finding.rs  gpu_binding.rs  mod.rs  node_insertion.rs  node_management.rs  raycasting.rs  util.rs
src/contree/datastructure/: mod.rs  tests.rs
