[package]
name = "voxel-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
clap = { version = "4.5.49", features = ["derive"] }
flume = "0.11.1"
glam = "0.30.8"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = "1.0.228"
serde-binary = "0.5.0"
thiserror = "2.0.17"
tracing = "0.1.41"
