[package]
name = "contree"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bitflags = "2.9.4"
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.8", features = ["serde"] }
rayon = "1.11.0"
serde = "1.0.228"
serde-binary = "0.5.0"
thiserror = "2.0.17"
tracing = "0.1.41"
